--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/auth-service
 spring.datasource.username=postgres
 spring.datasource.password=Arvijka
 spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+server.error.include-message=always
