--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.19.0'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 }
 
