--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8083
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/auth-service
 spring.datasource.username=postgres
 spring.datasource.password=Arvijka
@@ -6,3 +6,4 @@ spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 server.error.include-message=always
+spring.application.name=auth-service
