fix_prop_to_unite

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=8083
+spring.application.name=auth-service
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka
+eureka.instance.prefer-ip-address=true
+
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/auth-service
 spring.datasource.username=postgres
 spring.datasource.password=Arvijka
@@ -6,5 +10,3 @@ spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 server.error.include-message=always
-
-spring.application.name=auth-service
